tests/ui/closures/2229_closure_analysis/diagnostics/simple-struct-min-capture.stderr
error[E0502]: cannot borrow `p` as immutable because it is also borrowed as mutable
  --> $DIR/simple-struct-min-capture.rs:22:22
   |
LL |     let mut c = || {
   |                 -- mutable borrow occurs here
LL |         p.x += 10;
   |         --- capture is mutable because of use here
LL |         println!("{:?}", p);
   |                          - first borrow occurs due to use of `p` in closure
...
LL |     println!("{:?}", p);
   |     -----------------^-
   |     |                |
   |     |                immutable borrow occurs here
   |     in this macro invocation (#1)
LL |
LL |     c();
   |     - mutable borrow later used here
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!` (#1)
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::format_args_nl!` (#2)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
